[package]
name = "very_simple_2d"
version = "1.0.0"
authors = ["Ken Reed <kenakioreed@gmail.com>"]
repository = "https://github.com/tiby312/egaku2d"
readme = "README.md"
edition = "2018"
description = "Simple 2D graphics library"
license = "MIT/Apache-2.0"
keywords = ["2d-graphics", "2d","graphics","opengl"]








